tests/paczka1/fuzzy1/68899265.err
Error in line 25: bx4A0Ldx S584 41,1
Error in line 20: owbLKJEpziF S238 77,8
Error in line 35: UZlNnyVT S584 10,8
